src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Sellable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sellable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shopping_Cart_Hierarchy__c</fullName>
        <description>Picklist to determine the appropriate category hierarchy within the Apttus shopping cart function</description>
        <label>Shopping Cart Hierarchy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alternate Environments</fullName>
                </value>
                <value>
                    <fullName>CAD Software</fullName>
                </value>
                <value>
                    <fullName>Custom Solution</fullName>
                </value>
                <value>
                    <fullName>Fire Records</fullName>
                </value>
                <value>
                    <fullName>GeoComm</fullName>
                </value>
                <value>
                    <fullName>Hardware</fullName>
                </value>
                <value>
                    <fullName>Implementation Services</fullName>
                </value>
                <value>
                    <fullName>Installation Services</fullName>
                </value>
                <value>
                    <fullName>Mapping Services</fullName>
                </value>
                <value>
                    <fullName>MNHS</fullName>
                </value>
                <value>
                    <fullName>MNHS Services</fullName>
                </value>
                <value>
                    <fullName>Mobile Software</fullName>
                </value>
                <value>
                    <fullName>Project Management Services</fullName>
                </value>
                <value>
                    <fullName>Rehost Services</fullName>
                </value>
                <value>
                    <fullName>Reports</fullName>
                </value>
                <value>
                    <fullName>Runsheet</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>Software</fullName>
                </value>
                <value>
                    <fullName>Software Ancillary Modules</fullName>
                </value>
                <value>
                    <fullName>Software Base</fullName>
                </value>
                <value>
                    <fullName>Software Interfaces</fullName>
                </value>
                <value>
                    <fullName>Software Modification</fullName>
                </value>
                <value>
                    <fullName>Software Subscriptions</fullName>
                </value>
                <value>
                    <fullName>Third Party Services</fullName>
                </value>
                <value>
                    <fullName>Third Party Software</fullName>
                </value>
                <value>
                    <fullName>Third Party Support</fullName>
                </value>
                <value>
                    <fullName>Training Services</fullName>
                </value>
                <value>
                    <fullName>VisionCAD Base</fullName>
                </value>
                <value>
                    <fullName>VisionCAD Interface</fullName>
                </value>
                <value>
                    <fullName>VisionMOBILE Base</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Support_Level__c</fullName>
        <description>8 x 5 = 18%
24 x 7 = 22%
24 x 7 (911) = 18%
24 x 7 (Upgrade) = 25.88%
Perform = 18%
Pervasive = 25%
IQ 8 x 5 = 20%
24 x 7 &amp; 8 x 5 Tib = 18%</description>
        <inlineHelpText>8 x 5 = 18%
24 x 7 = 22%
24 x 7 (911) = 18%
24 x 7 (Upgrade) = 25.88%
Perform = 18%
Pervasive = 25%
IQ 8 x 5 = 20%
24 x 7 &amp; 8 x 5 Tib = 18%</inlineHelpText>
        <label>Support Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>8 x 5</fullName>
                </value>
                <value>
                    <fullName>24 x 7</fullName>
                </value>
                <value>
                    <fullName>IQ 8 x 5</fullName>
                </value>
                <value>
                    <fullName>Perform</fullName>
                </value>
                <value>
                    <fullName>Pervasive</fullName>
                </value>
                <value>
                    <fullName>24 x 7 (911)</fullName>
                </value>
                <value>
                    <fullName>24 x 7 (Upgrade)</fullName>
                </value>
                <value>
                    <fullName>8 X 5 Tib</fullName>
                </value>
                <value>
                    <fullName>24 X 7 Tib</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supportable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Support Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Template_Product_Category_Does_Not_Match__c</fullName>
        <formula>IF (  CLDY_Template_Product_Category__r.Name = TEXT( Template_Product_Category__c), &apos;Match&apos;, &apos;Does Not Match&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Template Product Category Does Not Match</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Template_Product_Category__c</fullName>
        <inlineHelpText>Utilized for assistance in categorizing items on generation templates</inlineHelpText>
        <label>Template Product Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CAD Software Base</fullName>
                </value>
                <value>
                    <fullName>CAD Software Ancillary Module</fullName>
                </value>
                <value>
                    <fullName>CAD Software Interface</fullName>
                </value>
                <value>
                    <fullName>CAD Alternate Environment</fullName>
                </value>
                <value>
                    <fullName>Fire Records Base</fullName>
                </value>
                <value>
                    <fullName>Fire Records Service</fullName>
                </value>
                <value>
                    <fullName>Mobile Software Base</fullName>
                </value>
                <value>
                    <fullName>Mobile Software Ancillary Module</fullName>
                </value>
                <value>
                    <fullName>Mobile Software Interface</fullName>
                </value>
                <value>
                    <fullName>Mobile Alternate Environment</fullName>
                </value>
                <value>
                    <fullName>911 Software Base</fullName>
                </value>
                <value>
                    <fullName>911 Software Ancillary Module</fullName>
                </value>
                <value>
                    <fullName>911 Software Interface</fullName>
                </value>
                <value>
                    <fullName>911 Alternate Environment</fullName>
                </value>
                <value>
                    <fullName>RMS Software Base</fullName>
                </value>
                <value>
                    <fullName>RMS Software Ancillary Module</fullName>
                </value>
                <value>
                    <fullName>RMS Software Interface</fullName>
                </value>
                <value>
                    <fullName>RMS Alternate Environment</fullName>
                </value>
                <value>
                    <fullName>MNHS Software</fullName>
                </value>
                <value>
                    <fullName>FBR Software Base</fullName>
                </value>
                <value>
                    <fullName>FBR Software Interface</fullName>
                </value>
                <value>
                    <fullName>Jail Software Base</fullName>
                </value>
                <value>
                    <fullName>Jail Software Ancillary Module</fullName>
                </value>
                <value>
                    <fullName>Jail Software Interface</fullName>
                </value>
                <value>
                    <fullName>Jail Alternate Environment</fullName>
                </value>
                <value>
                    <fullName>IQ Software Base</fullName>
                </value>
                <value>
                    <fullName>IQ Software Interface</fullName>
                </value>
                <value>
                    <fullName>CAD Installation Service</fullName>
                </value>
                <value>
                    <fullName>CAD Training Service</fullName>
                </value>
                <value>
                    <fullName>CAD Implementation Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Travel_days_incl_travel_to_the_site__c</fullName>
        <label>Travel days (incl travel to the site)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zuercher_Cost__c</fullName>
        <label>Zuercher Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Zuercher_List_Price__c</fullName>
        <label>Zuercher List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Zuercher_Price_Book__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Zuercher Price Book</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>EMS_Products</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>Product_Type__c</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>Product_Status_WMP__c</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.FAMILY</field>
            <operation>equals</operation>
            <value>EMS</value>
        </filters>
        <label>EMS Products</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ETI_Support_Products</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.FAMILY</field>
            <operation>equals</operation>
            <value>ETI</value>
        </filters>
        <label>ETI Support Products</label>
    </listViews>
    <listViews>
        <fullName>IMC_Products</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>Product_Type__c</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>Product_Status_WMP__c</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.FAMILY</field>
            <operation>equals</operation>
            <value>IMC</value>
        </filters>
        <label>IMC Support Products</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Impact_Support_Products</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.FAMILY</field>
            <operation>equals</operation>
            <value>Impact</value>
        </filters>
        <label>Impact Support Products</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Inform_Support_Products</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>Product_Type__c</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>Product_Status_WMP__c</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.FAMILY</field>
            <operation>equals</operation>
            <value>Inform</value>
        </filters>
        <filters>
            <field>Supportable__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Inform Support Products</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Omega_Support_Products</fullName>
        <booleanFilter>2 AND 3 AND (1 or 4)</booleanFilter>
        <columns>PRODUCT2.NAME</columns>
        <columns>Product_Type__c</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>Product_Status_WMP__c</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.NAME</field>
            <operation>startsWith</operation>
            <value>Omega</value>
        </filters>
        <filters>
            <field>Supportable__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>PRODUCT2.FAMILY</field>
            <operation>equals</operation>
            <value>IQ</value>
        </filters>
        <label>Omega Support Products</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Perform_Products</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.FAMILY</field>
            <operation>equals</operation>
            <value>Perform</value>
        </filters>
        <label>Perform Products</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Tiburon_Support_Products</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.FAMILY</field>
            <operation>equals</operation>
            <value>Tiburon</value>
        </filters>
        <filters>
            <field>Functional_Area__c</field>
            <operation>equals</operation>
            <value>Tiburon</value>
        </filters>
        <filters>
            <field>Supportable__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Tiburon Support Products</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>VisiNet_Support_Products</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.FAMILY</field>
            <operation>equals</operation>
            <value>VisiNet</value>
        </filters>
        <label>VisiNet Support Products</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>VisionAIR_Products</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>Product_Type__c</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>Product_Status_WMP__c</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>Supportable__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.FAMILY</field>
            <operation>equals</operation>
            <value>VisionAIR</value>
        </filters>
        <label>VisionAIR Products</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X911_Products</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>Product_Type__c</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>Product_Status_WMP__c</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Type__c</field>
            <operation>equals</operation>
            <value>911</value>
        </filters>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>911 Support Products</label>
        <sharedTo>
            <group>VisiNetSupportTeam</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Zuercher_Support_Products</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.FAMILY</field>
            <operation>equals</operation>
            <value>Zuercher</value>
        </filters>
        <label>Zuercher Support Products</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>